--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,13 @@ dj-rest-auth==5.0.1
 Django==4.2.6
 django-allauth==0.55.2
 django-autoslug==1.9.9
+django-braces==1.15.0
 django-cors-headers==4.3.0
+django-debug-toolbar==4.2.0
+django-extensions==3.2.3
+django-model-utils==4.3.1
+django-polymorphic==3.1.0
+django-rest-polymorphic==0.1.10
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 idna==3.4
@@ -22,5 +28,6 @@ python3-openid==3.2.0
 pytz==2023.3.post1
 requests==2.31.0
 requests-oauthlib==1.3.1
+six==1.16.0
 sqlparse==0.4.4
 urllib3==2.0.7
